test-suite/output/SchemeEqualityNoName.out
File "./output/SchemeEqualityNoName.v", line 2, characters 0-27:
Error: Naming of identifiers for Scheme Equality not supported.

