test-suite/output/SchemeEqualityNoName.v
Inductive A := a.
Scheme x := Equality for A.
